--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "@eduardoayora/observable-observer",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "Patrón observer extensible.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
